--- a/About/mediastyles.css
+++ b/About/mediastyles.css
@@ -7,6 +7,10 @@
     div.content1 p {
         font-size: 25px;
     }
+    
+    div.content2 span {
+        font-size: 25px;
+    }
 }
 
 @media only screen and (max-height: 700px) {
@@ -18,6 +22,13 @@
     }
     
     div.footer {
+        top: 315%;
+    }
+    
+    div.content2 {
         top: 215%;
+    }
+    div.content2 span {
+        font-size: 20px;
     }
 }
