--- a/About/styles.css
+++ b/About/styles.css
@@ -81,7 +81,7 @@ div.footer {
     background-color: rgb(0, 35, 50);
     width: 100%;
     height: 20%;
-    top: 200%;
+    top: 300%;
 }
 div.footer p {
     position: absolute;
@@ -98,6 +98,22 @@ div.footer p:hover {
 div.footer p#footeritem1 {
     left: 50%;
     transform: translateX(-50%);
+}
+
+div.content2 {
+    position: absolute;
+    top: 200%;
+    height: 100%;
+    width: 100%;
+    background-color: #00d4ff;
+}
+div.content2 span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 30px;
 }
 
 
