--- a/About/styles.css
+++ b/About/styles.css
@@ -1,140 +1,117 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+
 body {
     margin: 0;
-    background-color: gray;
+    background-color: black;
+    font-family: Oswald, Arial;
+    overflow-x: hidden;
 }
 
-body * {
-    overflow: hidden;
+*::selection {
+    background-color: rgb(0, 162, 205);
 }
-
-div.menubar {
-  position: fixed;
-  width: 100%;
-  height: 5%;
-  background-color: white;
-  z-index: 9;
-}
-div.menubar p.menuitem {
-    position: absolute;
-    margin: 0;
-    top: 50%;
-    left: 80%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(230, 230, 230);
-    text-decoration: none;
+a {
     color: black;
-    padding-left: 5px;
-    padding-right: 5px;
 }
-div.menubar p.menuitem1 {
-    left: 20%;
-}
-div.menubar p.menuitem:hover {
-    background-color: #00D4FF;
+a:hover {
+    box-shadow: 0 0 15px 1px black;
 }
 
-div.title {
-    top: 5%;
-    position: absolute;
-    width: 100%;
-    height: 95%;
-    background-color: #00D4FF;
-}
-div.title img {
-    position: absolute;
-    max-width: 100%;
-    max-height: 95%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-div.title p {
-    position: absolute;
-    margin: 0;
-    bottom: 2%;
-    width: 100%;
-    font-size: 40px;
-    color: white;
+h1 { font-size: 90px; margin: 0; }
+h2 { font-size: 5em; margin: 0; }
+h3 { font-size: 4em; margin: 0; }
+h4 { font-size: 3em; margin: 0; }
+h5 { font-size: 2em; margin: 0; }
+h6 { font-size: 1.5em; margin: 0; }
+p, a { font-size: 25px; margin: 0;}
+
+div#js-unsafe, div#js-unsafe * {
     text-align: center;
+    color: white;
+}
+div#js-safe {
+    display: none;
 }
 
-div.content1 {
+div#menu-button {
+    position: fixed;
+    right: 0;
+    width: 5%;
+    height: 100%;
+    background-color: rgba(100, 100, 100, .5);
+    cursor: pointer;
+    z-index: 10;
+    animation: menuHelper 5s ease-in-out infinite;
+}
+div#menu-frame {
+    position: fixed;
+    right: 0;
+    width: 0;
+    height: 100%;
+    text-align: center;
+    z-index: 9;
+    background-color: rgba(200, 200, 200, .75);
+    overflow-x: hidden;
+}
+div.section-button {
+    position: relative;
+    left: 25%;
+    margin-top: 5vh;
+    width: 50%;
+    text-align: center;
+    background-color: rgba(100, 100, 100, .5);
+    cursor: pointer;
+    font-size: 2.5vh;
+}
+div.section-button:hover {
+    background-color: rgba(100, 100, 100, .75);
+}
+
+div.section {
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 100%;
-    background-color: rgb(200, 230, 255);
-}
-div.content1 p {
-    position: absolute;
-    margin: 0;
-    left: 50%;
-    top: 50%;
-    width: 80%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
+    opacity: 0;
+    overflow-y: auto;
+    font-family: Arial;
     text-align: center;
+    background-color: rgb(0, 212, 255);
 }
-
-div.footer {
-    position: absolute;
-    background-color: rgb(0, 35, 50);
-    width: 100%;
-    height: 20%;
-    top: 300%;
-}
-div.footer p {
-    position: absolute;
-    margin: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    color: white;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-div.footer p:hover {
-    background-color: #00D4FF;
-}
-div.footer p#footeritem1 {
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-div.content2 {
-    position: absolute;
-    top: 200%;
-    height: 100%;
-    width: 100%;
-    background-color: #00d4ff;
-}
-div.content2 span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 30px;
+div.section p, div.section h1, div.section h2, div.section h3, div.section h4 {
+    margin: 0 5%;
+    margin-top: 5vh;
+    max-width: 90%;
 }
 
 
-div.contactcontent {
-    position: absolute;
-    width: 100%;
-    height: 95%;
-    top: 5%;
-    background-color: rgb(200, 230, 255);
+@keyframes showMenu {
+    0% { width: 0; }
+    100% { width: 100%; }
 }
-div.contactcontent p {
-    position: absolute;
-    margin: 0;
-    left: 50%;
-    top: 50%;
-    width: 80%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
-    text-align: center;
+@keyframes hideMenu {
+    0% { width: 100%; }
+    100% { width: 0; }
 }
-div.contactcontent p a {
-    text-decoration: none;
-    color: black;
+
+@keyframes menuHelper {
+    0% { background-color: rgba(100, 100, 100, .5); }
+    50% { background-color: rgba(100, 100, 100, .75); }
+    100% { background-color: rgba(100, 100, 100, .5); }
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+}
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@media only screen and (orientation: portrait) {
+    div#menu-button {
+        right: initial;
+        width: 100%;
+        height: 5%;
+    }
 }
