--- a/Avoiid/styles.css
+++ b/Avoiid/styles.css
@@ -1,4 +1,7 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Oswald');
+﻿/* /\/OIID */
+/* v0.4 */
+
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 body {
     margin: 0;
     font-family: Oswald, Arial;
