--- a/Avoiid/styles.css
+++ b/Avoiid/styles.css
@@ -1,5 +1,7 @@
 ﻿/* /\/OIID */
-/* v0.4 */
+/* v0.5 */
+/* Made by HIHIQY1 */
+/* Do not copy! */
 
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 body {
