--- a/Taekenlijst/styles.css
+++ b/Taekenlijst/styles.css
@@ -4,7 +4,9 @@ body {
     margin: 0;
     background-color: rgb(100, 100, 100);
     font-family: Oswald, Arial;
-    overflow-x: hidden;
+    overflow: hidden;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 * * {
