--- a/Taekenlijst/styles.css
+++ b/Taekenlijst/styles.css
@@ -15,8 +15,15 @@ body {
     margin: 0;
 }
 
-#header {
+#main {
     position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+}
+
+#header {
+    position: fixed;
     width: 100%;
     height: 10vh;
     background-color: rgb(125, 125, 125);
@@ -78,7 +85,7 @@ h2 {
 }
 
 #panel-add-task {
-    position: absolute;
+    position: fixed;
     right: -100%;
     width: 100%;
     height: 100vh;
