--- a/Taekenlijst/styles.css
+++ b/Taekenlijst/styles.css
@@ -55,10 +55,12 @@ body {
 .task {
     position: relative;
     width: 100%;
-    height: 15vh;
+    min-height: 15vh;
     float: left;
     margin-bottom: 1vh;
     background-color: rgb(75, 75, 75);
+    padding: 1vh;
+    box-sizing: border-box;
 }
 .highpriority {
     background: linear-gradient(rgb(75, 75, 75), rgb(100, 75, 75));
