--- a/Taekenlijst/styles.css
+++ b/Taekenlijst/styles.css
@@ -1,3 +1,5 @@
+/* COPYLEFT (ᴐ) HIHIQY1 2018 */
+
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
 body {
@@ -13,6 +15,38 @@ body {
     transition-duration: 1s;
     transition-timing-function: ease-in-out;
     margin: 0;
+}
+
+.button {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 2.5vh;
+    display: inline-block;
+    min-width: 50%;
+    max-width: 100%;
+    text-align: center;
+    color: white;
+    background-color: black;
+    border-radius: 1vh;
+    padding: 1vh;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition-duration: initial;
+    font-size: 5vw;
+}
+.button:active {
+    background-color: rgb(50, 50, 50);
+}
+
+#welcomepanel {
+    position: absolute;
+    right: -100%;
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(150, 150, 150);
+    transition-duration: initial;
 }
 
 #main {
@@ -129,19 +163,5 @@ h2 {
     transform: translateX(-50%);
     display: inline-block;
     text-align: center;
-}
-#btn-add-task {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
-    min-width: 50%;
-    max-width: 100%;
-    text-align: center;
-    color: white;
-    background-color: black;
-    border-radius: 1vh;
-    padding: 1vh;
-    box-sizing: border-box;
-    cursor: pointer;
+    font-size: 5vw;
 }
