--- a/About/styles.css
+++ b/About/styles.css
@@ -1,117 +1,119 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald');
-
 body {
-    margin: 0;
-    background-color: black;
-    font-family: Oswald, Arial;
-    overflow-x: hidden;
-}
-
-*::selection {
-    background-color: rgb(0, 162, 205);
-}
-a {
-    color: black;
-}
-a:hover {
-    box-shadow: 0 0 15px 1px black;
-}
-
-h1 { font-size: 90px; margin: 0; }
-h2 { font-size: 5em; margin: 0; }
-h3 { font-size: 4em; margin: 0; }
-h4 { font-size: 3em; margin: 0; }
-h5 { font-size: 2em; margin: 0; }
-h6 { font-size: 1.5em; margin: 0; }
-p, a { font-size: 25px; margin: 0;}
-
-div#js-unsafe, div#js-unsafe * {
-    text-align: center;
-    color: white;
-}
-div#js-safe {
-    display: none;
-}
-
-div#menu-button {
-    position: fixed;
-    right: 0;
-    width: 5%;
-    height: 100%;
-    background-color: rgba(100, 100, 100, .5);
-    cursor: pointer;
-    z-index: 10;
-    animation: menuHelper 5s ease-in-out infinite;
-}
-div#menu-frame {
-    position: fixed;
-    right: 0;
-    width: 0;
-    height: 100%;
-    text-align: center;
-    z-index: 9;
-    background-color: rgba(200, 200, 200, .75);
-    overflow-x: hidden;
-}
-div.section-button {
-    position: relative;
-    left: 25%;
-    margin-top: 5vh;
-    width: 50%;
-    text-align: center;
-    background-color: rgba(100, 100, 100, .5);
-    cursor: pointer;
-    font-size: 2.5vh;
-}
-div.section-button:hover {
-    background-color: rgba(100, 100, 100, .75);
-}
-
-div.section {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    overflow-y: auto;
+    top: 0;
+    margin: 0;
     font-family: Arial;
+    color: white;
+    background: url("https://HIHIQY1.github.io/HIHIQY1/bg.png");
+}
+
+body * {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+a {
+    color: rgb(100, 255, 100);;
+}
+
+#header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 10vh;
+    background-color: rgba(0, 0, 0, .75);
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, .8);
+}
+#headeritems {
+    position: absolute;
+    height: 100%;
+    overflow: hidden;
+}
+.headeritem {
+    float: left;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .25);
+    padding: 1vw;
+    box-sizing: border-box;
+    transition-duration: .5s;
+    cursor: pointer;
+}
+.headeritem:hover {
+    background-color: rgba(255, 255, 255, .5);
+}
+.headeritem span {
+    position: relative;
+    top: 50%;
+    display: block;
+    transform: translateY(-50%);
+    font-size: 1.5vw;
+}
+
+#title {
+    margin: 0;
+    margin-top: Calc(10vh + 2.5vh);
+    font-size: 10vw;
     text-align: center;
-    background-color: rgb(0, 212, 255);
-}
-div.section p, div.section h1, div.section h2, div.section h3, div.section h4 {
-    margin: 0 5%;
-    margin-top: 5vh;
-    max-width: 90%;
+    text-shadow: 0 0 10px white;
 }
 
-
-@keyframes showMenu {
-    0% { width: 0; }
-    100% { width: 100%; }
-}
-@keyframes hideMenu {
-    0% { width: 100%; }
-    100% { width: 0; }
+#textblocks {
+    margin-top: 2.5vh;
+    margin-left: 2.5%;
+    width: 95%;
 }
 
-@keyframes menuHelper {
-    0% { background-color: rgba(100, 100, 100, .5); }
-    50% { background-color: rgba(100, 100, 100, .75); }
-    100% { background-color: rgba(100, 100, 100, .5); }
+.tile {
+    margin-bottom: Calc(15px + 1vw);
+    width: 100%;
+    background-color: rgba(255, 255, 255, .25);
+    border-radius: 2.5vh;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, .8);
+    overflow: hidden;
+    padding: 2vw;
+    box-sizing: border-box;
 }
-
-@keyframes fadeOut {
-    0% { opacity: 1; }
-    100% { opacity: 0; }
+.tiletext, .tile p {
+    margin: 0;
+    text-align: center;
+    font-size: 2vw;
 }
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+.tiletitle {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    display: inline-block;
+    font-size: 5vw;
+    margin: 0;
+    text-shadow: 0 0 5px white;
+    text-align: center;
 }
 
 @media only screen and (orientation: portrait) {
-    div#menu-button {
-        right: initial;
-        width: 100%;
-        height: 5%;
+    #header {
+        display: none;
+    }
+    #textblocks {
+        margin-left: 5%;
+        width: 90%;
+    }
+    #title {
+        margin-top: 0;
+        font-size: 10vh;
+    }
+    .tile {
+        margin-bottom: Calc(15px + 1vh);
+        padding: 2vh;
+    }
+    .tiletext, .tile p {
+        font-size: 2vh;
+    }
+    .tiletitle {
+        font-size: 5vh;
     }
 }
