--- a/Taekenlijst/styles.css
+++ b/Taekenlijst/styles.css
@@ -40,17 +40,18 @@ body {
 }
 
 #welcomepanel {
-    position: absolute;
+    position: fixed;
     right: -100%;
     overflow: hidden;
     width: 100%;
     height: 100vh;
     background-color: rgb(150, 150, 150);
     transition-duration: initial;
+    display: none;
 }
 
 #main {
-    position: absolute;
+    position: fixed;
     overflow: hidden;
     width: 100%;
     height: 100vh;
@@ -61,6 +62,12 @@ body {
     width: 100%;
     height: 10vh;
     background-color: rgb(125, 125, 125);
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 #logo {
     position: absolute;
@@ -100,13 +107,12 @@ body {
     background-color: rgb(75, 75, 75);
     padding: 1vh;
     box-sizing: border-box;
-    word-break: break-all;
 }
 .highpriority {
-    background: linear-gradient(rgb(75, 75, 75), rgb(100, 75, 75));
+    background: linear-gradient(rgb(75, 75, 75), rgb(87.5, 75, 75));
 }
 .midpriority {
-    background: linear-gradient(rgb(75, 75, 75), rgb(100, 100, 75));
+    background: linear-gradient(rgb(75, 75, 75), rgb(87.5, 87.5, 75));
 }
 .lowpriority {
     background: rgb(75, 75, 75);
@@ -120,10 +126,17 @@ body {
     font-size: 4vh;
     text-align: center;
     cursor: pointer;
+    
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
-h2 {
+.task p {
     color: white;
     margin-right: 5vh;
+    font-size: 1.5em;
 }
 
 #panel-add-task {
@@ -142,6 +155,12 @@ h2 {
     font-size: 5vh;
     text-align: center;
     cursor: pointer;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 #add-form {
     position: absolute;
