--- a/QodeWords/quiz.css
+++ b/QodeWords/quiz.css
@@ -24,6 +24,7 @@
 .quizanswer {
     position: relative;
     width: 100%;
+    min-height: Calc(2vw + 2vh);
     margin-top: 1vh;
     background-color: rgb(200, 200, 200);
     font-size: 2vw;
@@ -74,6 +75,36 @@
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
+}
+#end h2 {
+    margin: 0;
+    margin-bottom: 2.5vh;
+    font-size: 2vw;
+    text-align: center;
+}
+#wrong-answers {
+    position: absolute;
+    bottom: 2.5vh;
+    left: 2.5%;
+    width: 95%;
+    max-height: 50vh;
+    overflow-y: auto;
+}
+.wrong-answer {
+    position: relative;
+    width: 100%;
+    min-height: Calc(2vw + 2vh);
+    margin-top: 1vh;
+    background-color: rgb(200, 200, 200);
+    box-sizing: border-box;
+    padding: 1vh;
+}
+.wrong-answer h1, .wrong-answer p {
+    margin: 0;
+    font-size: 2vw;
+}
+.wrong-answer p {
+    background-color: rgb(100, 255, 100);
 }
 
 @media only screen and (orientation: portrait) {
