--- a/Taekenlijst/styles.css
+++ b/Taekenlijst/styles.css
@@ -122,16 +122,13 @@ body {
     right: 0;
     bottom: 0;
     width: 5vh;
-    font-family: Arial;
-    font-size: 4vh;
-    text-align: center;
     cursor: pointer;
-    
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+}
+.btn-remove img {
+    margin-right: 12.5%;
+    margin-bottom: 12.5%;
+    width: 75%;
+    height: 75%;
 }
 .task p {
     color: white;
@@ -150,23 +147,21 @@ body {
     position: absolute;
     right: 0;
     margin: 0;
-    width: 6vh;
-    font-family: Arial;
-    font-size: 5vh;
-    text-align: center;
+    width: 10vh;
+    height: 10vh;
     cursor: pointer;
-
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+}
+#btn-close img {
+    margin-left: 12.5%;
+    margin-top: 12.5%;
+    width: 75%;
+    height: 75%;
 }
 #add-form {
     position: absolute;
     left: 2.5%;
     width: 95%;
-    top: 7.5vh;
+    top: 10vh;
 }
 #add-form * {
     font-size: 5vw;
@@ -191,9 +186,22 @@ body {
     font-size: 5vw;
 }
 
+#html-encoder-box {
+    position: fixed;
+    bottom: 100vh;
+    left: 0;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    visibility: hidden;
+}
+
 
 @media only screen and (orientation: landscape) {
     .task {
         min-height: 20vh;
+    }
+    .title, #add-form *, .button {
+        font-size: 3vw;
     }
 }
