--- a/projectslayout.css
+++ b/projectslayout.css
@@ -1,8 +1,10 @@
 body {
-background-image: url('bg.png');
-background-repeat: repeat;
-color: white;
+    margin: 0;
+    background-image: url('bg.png');
+    background-repeat: repeat;
+    color: white;
+    font-family: Arial;
 }
 a {
-color: rgb(100, 255, 100);
+    color: rgb(100, 255, 100);
 }
