--- a/qyApps/styles.css
+++ b/qyApps/styles.css
@@ -4,6 +4,8 @@ body {
     margin: 0;
     background-color: rgb(20, 20, 20);
     font-family: Arial;
+    min-height: 100vh;
+    overflow: hidden;
 }
 
 #toolbar {
@@ -15,6 +17,8 @@ body {
     background-color: hsl(90, 50%, 50%);
     overflow-y: hidden;
     white-space: nowrap;
+    z-index: 2;
+    box-shadow: 0 0 10mm 1px rgba(0, 0, 0, 0.5);
 }
 #toolbarlogo {
     position: relative;
@@ -61,11 +65,14 @@ body {
     position: absolute;
     top: 10vh;
     width: 100%;
-    min-height: 90vh;
+    max-height: 90vh;
     box-sizing: border-box;
     padding-top: 2vh;
     user-select: none;
     -webkit-user-select: none;
+    cursor: default;
+    overflow: hidden;
+    overflow-y: auto;
 }
 .tile {
     position: relative;
@@ -80,6 +87,9 @@ body {
     transition-duration: .15s;
     color: white;
 }
+.tile * {
+    transition-duration: .15s;
+}
 .tile:hover {
     background-color: hsl(90, 50%, 55%);
 }
@@ -88,6 +98,9 @@ body {
     padding-bottom: 1vh;
     margin-top: 1vh;
     margin-bottom: 3vh;
+}
+.tile:active * {
+    opacity: 0;
 }
 .tiletitle {
     font-family: Catamaran, Arial;
@@ -106,12 +119,14 @@ body {
     height: 100vh;
     background-color: hsl(90, 50%, 50%);
     color: white;
+    transition-timing-function: cubic-bezier(0, .5, .5, 1);
     transition-duration: .5s;
-    z-index: 2;
+    z-index: 3;
     user-select: none;
     -webkit-user-select: none;
     box-sizing: border-box;
     padding: 2vh;
+    overflow-x: hidden;
     overflow-y: auto;
 }
 #btn-close {
@@ -150,19 +165,32 @@ body {
     font-weight: bold;
     font-size: 4vh;
 }
-.spacer {
+.line {
     position: relative;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
     width: 100%;
     height: 5px;
     background-color: hsl(90, 50%, 45%);
     border-radius: 2.5px;
 }
+.spacer {
+    position: relative;
+    /*background-color: red;*/
+    height: 1vh;
+}
+.spacer2 {
+    position: relative;
+    /*background-color: red;*/
+    height: 2vh;
+}
+.apppageheader {
+    font-family: Catamaran, Arial;
+    font-size: 3vh;
+}
+.apppageparagraph {
+    font-size: 2vh;
+}
 .downloadbutton {
     position: relative;
-    margin-right: 1vh;
-    margin-bottom: 5px;
     width: 100%;
     font-size: 2vh;
     display: inline-block;
@@ -194,15 +222,40 @@ body {
     font-size: 2vh;
 }
 
+#apppagetransition {
+    position: fixed;
+    width: 92%;
+    visibility: hidden;
+    background-color: hsl(90, 50%, 50%);
+    border-radius: 1vh;
+    transition-timing-function: cubic-bezier(0, .5, .5, 1);
+    z-index: 4;
+    /*opacity: 0;*/
+}
+
+#main-wrapper {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    transition-timing-function: cubic-bezier(0, .5, .5, 1);
+    transition-duration: .5s;
+}
+
 @media only screen and (min-width: 750px) {
     .tile {
         margin-left: 2%;
+        width: 47%;
+    }
+    #apppagetransition {
         width: 47%;
     }
 }
 @media only screen and (min-width: 1400px) {
     .tile {
         margin-left: 2%;
+        width: 22.5%;
+    }
+    #apppagetransition {
         width: 22.5%;
     }
 }
