Bugfix larger screen qyApps (v0.3.1)
The viewport would expand 1.05x it's original size. That ain't how it's supposed to be, of course.

--- a/qyApps/styles.css
+++ b/qyApps/styles.css
@@ -41,6 +41,7 @@ body {
     color: white;
     user-select: none;
     -webkit-user-select: none;
+    cursor: default;
     font-size: 3vh;
     padding: 2vh;
     box-sizing: border-box;
@@ -124,6 +125,7 @@ body {
     z-index: 3;
     user-select: none;
     -webkit-user-select: none;
+    cursor: default;
     box-sizing: border-box;
     padding: 2vh;
     overflow-x: hidden;
