--- a/qQuiz/Editor/editor.css
+++ b/qQuiz/Editor/editor.css
@@ -36,3 +36,6 @@ input[type="radio"] + span {
 input[type="radio"]:checked + span {
     background-color: green;
 }
+input.answer, input#question {
+    width: 80%;
+}
