--- a/McCollough/styles.css
+++ b/McCollough/styles.css
@@ -69,6 +69,7 @@ a {
     -moz-user-select: none;
     cursor: pointer;
     font-size: 1.25em;
+    -webkit-tap-highlight-color: transparent;
 }
 .button:active {
     transition-duration: 0.2s;
@@ -136,5 +137,16 @@ input[type="number"] {
     }
     .button:active {
         box-shadow: inset 0 0 1vh rgba(0, 0, 0, 0.5);
+    }
+    #pnl-main {
+        display: flex;
+        flex-direction: initial;
+        align-content: center;
+        /*align-items: center;*/
+    }
+    #img-redgreen {
+        height: initial;
+        width: 100%;
+        display: inline-block;
     }
 }
