--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,105 @@
 ﻿body {
-  margin: 0;
-  font-family: Arial;
-  background-image: url("bg.png");
-  background-repeat: repeat;
-  color: white;
-  background-image: url("https://HIHIQY1.github.io/HIHIQY1/bg.png");
+    margin: 0;
+    font-family: Arial;
+    background-image: url("bg.png");
+    background-repeat: repeat;
+    color: white;
+    background-image: url("./bg.png");
 }
 body * {
-  transition-duration: 1s;
+    transition-duration: 1s;
 }
 
 h1 {
-  font-size: 75px;
-  margin: 0;
+    font-size: 75px;
+    margin: 0;
 }
 h2 {
-  font-size: 68px;
-  margin: 0;
+    font-size: 68px;
+    margin: 0;
 }
 h3 {
-  font-size: 61px;
-  margin: 0;
+    font-size: 61px;
+    margin: 0;
 }
 h4 {
-  font-size: 54px;
-  margin: 0;
+    font-size: 54px;
+    margin: 0;
 }
 h5 {
-  font-size: 47px;
-  margin: 0;
+    font-size: 47px;
+    margin: 0;
 }
 h6 {
-  font-size: 40px;
-  margin: 0;
+    font-size: 1.75em;
+    margin: 0;
 }
 p,
 a {
-  font-size: 20px;
-  margin: 0;
+    font-size: 1.25em;
+    margin: 0;
 }
 
-.title {
-  text-shadow: 0 0 10px white;
-  width: 75%;
-  overflow: hidden;
-}
-
-.centeredh {
-  position: absolute;
-  left: 50%;
-  text-align: center;
-  transform: translateX(-50%);
+#title {
+    text-shadow: 0 0 10px white;
+    overflow: hidden;
+    text-align: center;
 }
 
 div#projs {
-  position: absolute;
-  top: 25vh;
-  padding-bottom: 5vh;
+    display: inline-block;
+    padding-bottom: 15px;
 }
 div.block {
-  position: relative;
-  margin-left: 4%;
-  margin-top: 5vh;
-  width: 20%;
-  height: 45vh;
-  min-width: 0px;
-  min-height: 0px;
-  float: left;
-  background-color: rgba(255, 255, 255, 0.25);
-  border-radius: 2.5vh;
-  box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.8);
-  overflow: hidden;
-  overflow-y: auto;
+    position: relative;
+    display: block;
+    margin-left: 4%;
+    margin-top: 5vh;
+    width: 20%;
+    height: 45vh;
+    min-width: 0px;
+    min-height: 0px;
+    float: left;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 2.5vh;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.8);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 div.block h6,
 div.block p {
-  margin: 0 2vw;
-  word-wrap: break-word;
+    margin: 0 2vw;
+    overflow-x: auto;
 }
 a {
-  color: rgb(100, 255, 100);
+    color: rgb(100, 255, 100);
 }
 a.projlink {
-  position: absolute;
-  right: 1vh;
-  bottom: 1vh;
+    margin: 0 2vw;
 }
 a.hiddenlink {
-  color: white;
-  text-decoration: none;
-  cursor: default;
+    color: white;
+    text-decoration: none;
+    cursor: default;
 }
 
 #dutchblock {
-  background: linear-gradient(
-    rgba(255, 0, 0, 0.25),
-    rgba(255, 255, 255, 0.25),
-    rgba(0, 0, 255, 0.25)
-  );
+    background: linear-gradient(
+        rgba(255, 0, 0, 0.25),
+        rgba(255, 255, 255, 0.25),
+        rgba(0, 0, 255, 0.25)
+    );
 }
 
 @media only screen and (max-width: 1200px) {
-  div#projs {
-    top: 40vh;
-  }
-
-  div.block {
-    width: 44%;
-    height: 45vh;
-  }
+    div.block {
+        width: 44%;
+        height: 45vh;
+    }
 }
 @media only screen and (orientation: portrait) {
-  .title {
-    width: 100%;
-  }
-
-  div#projs {
-    top: 40vh;
-  }
-
-  div.block {
-    width: 92%;
-    height: 45vh;
-  }
+    div.block {
+        width: 92%;
+        height: 45vh;
+    }
 }
