--- a/SVGRenderer/styles.css
+++ b/SVGRenderer/styles.css
@@ -14,6 +14,7 @@ body {
     width: 100%;
     height: 100%;
     transition-duration: .5s;
+    transition-timing-function: cubic-bezier(.25, 0, .5, 1);
     transform: scale(0);
     opacity: 0;
 }
@@ -52,6 +53,18 @@ input[type="file"] {
 input[type="number"] {
     font-size: 2rem;
     max-width: Calc(100% - 4rem);
+    background-color: rgb(30, 30, 30);
+    border: none;
+    color: rgb(200, 200, 200);
+    box-shadow: 0 0 0 .5rem transparent;
+    transition-duration: .15s;
+    box-sizing: border-box;
+    padding: .5rem;
+    border-radius: .5rem;
+}
+input[type="number"]:focus {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 .5rem rgb(30, 30, 30);
 }
 .input-file, .button {
     display: inline-block;
@@ -74,10 +87,18 @@ input[type="number"] {
 .input-file:active, .button:active {
     box-shadow: inset 0 0 1rem .5rem rgb(30, 30, 30);
 }
+.disabledbutton {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 .5rem rgb(30, 30, 30);
+} .disabledbutton:hover {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 .5rem rgb(30, 30, 30);
+}
 img {
     max-width: Calc(100% - 4rem);
     max-height: 50vh;
+    border-radius: .5rem;
 }
-#canvas {
+#newsize, #loadedfile, #canvas {
     display: none;
 }
