--- a/McCollough/styles.css
+++ b/McCollough/styles.css
@@ -1,15 +1,16 @@
 body {
     margin: 0;
     font-family: Arial;
+    background-color: rgb(255, 225, 225);
 }
 h1 {
     margin: 0;
-    font-size: 2.5em;
+    font-size: 2.5rem;
 }
 p {
     position: relative;
     margin: 0;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     max-width: 75vw;
 }
 a {
@@ -30,7 +31,7 @@ a {
     opacity: 0;
     transition-duration: 1s;
     visibility: hidden;
-    background-color: white;
+    background-color: rgb(255, 225, 225);
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -45,20 +46,20 @@ a {
     opacity: 0;
 }
 .spacer {
-    position: relative;
+    width: 1px;
     height: 1vh;
 }
 .spacer2 {
-    position: relative;
+    width: 1px;
     height: 2vh;
 }
 .spacer5 {
-    position: relative;
+    width: 1px;
     height: 5vh;
 }
-.spacer25 {
-    position: relative;
-    height: 25vh;
+.spacer10 {
+    width: 1px;
+    height: 10vh;
 }
 .button {
     color: white;
@@ -68,7 +69,7 @@ a {
     user-select: none;
     -moz-user-select: none;
     cursor: pointer;
-    font-size: 1.25em;
+    font-size: 1.25rem;
     -webkit-tap-highlight-color: transparent;
 }
 .button:active {
@@ -93,10 +94,14 @@ a {
 }
 
 input[type="number"] {
-    background-color: black;
+    background-color: transparent;
     color: white;
     border: none;
-    box-shadow: 0 0 5px 2.5px white;
+    padding: .5rem;
+    border-radius: .5rem;
+    box-shadow: 0 0 .2rem .1rem rgb(255, 225, 225);
+    font-size: 1.5rem;
+    max-width: 75vw;
     display: inline;
 }
 
@@ -115,7 +120,7 @@ input[type="number"] {
 }
 #footer p {
     max-width: initial;
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 #footerspacer {
     position: relative;
@@ -131,6 +136,9 @@ input[type="number"] {
 }
 
 @media only screen and (orientation: portrait) {
+    p {
+        max-width: 95vw;
+    }
     .button {
         padding: 1vh;
         border-radius: 0.25vh;
