--- a/qQuiz/styles.css
+++ b/qQuiz/styles.css
@@ -48,6 +48,10 @@ a {
     color: rgb(240, 240, 240);
 }
 
+.spacer {
+    height: 1vh;
+    width: 1px;
+}
 .spacer2 {
     height: 2vh;
     width: 1px;
@@ -62,8 +66,10 @@ a {
     bottom: 0;
     left: 0;
     width: 100%;
+    max-height: 10vh;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     box-sizing: border-box;
     padding: Calc(1vh + 2vw);
 }
@@ -77,11 +83,15 @@ a {
     border-radius: 1vh;
     cursor: pointer;
     font-size: 2em;
+    transition-duration: .15s;
 
     user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
+}
+.button:hover {
+    background-color: rgb(10, 10, 10);
 }
 .button:active {
     background-color: rgb(50, 50, 50);
@@ -96,8 +106,14 @@ a {
 
 .title {
     margin: 0;
-    font-size: 5em;
+    font-size: 5rem;
     text-align: center;
+}
+.subtitle {
+    margin: 0;
+    font-size: 3rem;
+    text-align: center;
+    flex-shrink: 0;
 }
 #status {
     margin: 0;
@@ -136,6 +152,9 @@ a {
     transition-timing-function: cubic-bezier(.5, .5, 0, 1);
 }
 
+#pnl-savedquizzes {
+    display: none;
+}
 #pnl-load {
     display: none;
 }
@@ -160,8 +179,73 @@ a {
     opacity: 0;
 }
 
-@media only screen and (orientation: portrait) {
-    #status {
-        font-size: 6vw;
-    }
+#savedquizzescontainer {
+    position: relative;
+    width: 100%;
+    max-height: 90vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.sql-item {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1rem;
+    background-color: rgb(50, 50, 50);
+
+    transition-duration: .15s;
+    transition-timing-function: cubic-bezier(.5, .5, .5, 1);
+
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+.sql-item-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.sql-item-label {
+    font-size: 1.5rem;
+}
+.sql-item:hover {
+    background-color: rgb(40, 40, 40);
+}
+.sql-item:active {
+    background-color: rgb(35, 35, 35);
+}
+
+.modal-wrapper {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .75);
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(.5, .5, .5, 1);
+    opacity: 0;
+    z-index: 5;
+    color: white;
+}
+.modal-content * {
+    margin: 0;
+}
+.modal-content {
+    padding: 1.5rem;
+    border-radius: 1rem;
+    background-color: rgb(20, 20, 20);
+}
+.modal-line {
+    position: relative;
+    width: 100%;
+    height: .5rem;
+    border-radius: 1rem;
+    background-color: rgb(50, 50, 50);
+}
+.modal-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
