--- a/McCollough/styles.css
+++ b/McCollough/styles.css
@@ -135,6 +135,30 @@ input[type="number"] {
     -webkit-user-select: none;
 }
 
+#copiedwrapper {
+    position: fixed;
+    bottom: 2.5vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#copied {
+    box-sizing: border-box;
+    max-width: 95%;
+    padding: 1vw;
+
+    color: white;
+    background-color: rgb(255, 150, 150);
+    border-radius: 0.25vw;
+    user-select: none;
+    -moz-user-select: none;
+    font-size: 1.25rem;
+    -webkit-tap-highlight-color: transparent;
+
+    transition-duration: .25s;
+    transform: scale(0);
+}
+
 @media only screen and (orientation: portrait) {
     p {
         max-width: 95vw;
