--- a/Dotifier/styles.css
+++ b/Dotifier/styles.css
@@ -90,6 +90,7 @@ textarea {
     box-shadow: 0 0 0 .25rem rgb(25, 25, 25);
     transition-duration: .15s;
     transition-timing-function: cubic-bezier(.25, 0, .5, 1);
+    outline:none;
 }
 textarea:hover {
     box-shadow: 0 0 0 .25rem rgb(40, 40, 40);
