--- a/Dotifier/styles.css
+++ b/Dotifier/styles.css
@@ -25,6 +25,8 @@ body {
     opacity: 0;
     text-align: center;
     overflow-y: auto;
+    /* Goddamn iOS */
+    -webkit-overflow-scrolling: touch;
 }
 
 h1 {
@@ -90,7 +92,7 @@ textarea {
     box-shadow: 0 0 0 .25rem rgb(25, 25, 25);
     transition-duration: .15s;
     transition-timing-function: cubic-bezier(.25, 0, .5, 1);
-    outline:none;
+    outline: none;
 }
 textarea:hover {
     box-shadow: 0 0 0 .25rem rgb(40, 40, 40);
